--- a/addbook.ui
+++ b/addbook.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>571</width>
-    <height>299</height>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="titel">
+          <widget class="QLineEdit" name="title">
            <property name="placeholderText">
             <string>Tựa đề</string>
            </property>
@@ -43,6 +43,9 @@
          </item>
          <item>
           <widget class="QLineEdit" name="year">
+           <property name="inputMethodHints">
+            <set>Qt::ImhDigitsOnly</set>
+           </property>
            <property name="placeholderText">
             <string>Năm xuất bản</string>
            </property>
@@ -50,8 +53,21 @@
          </item>
          <item>
           <widget class="QLineEdit" name="pages">
+           <property name="inputMethodHints">
+            <set>Qt::ImhDigitsOnly</set>
+           </property>
            <property name="placeholderText">
             <string>Số trang</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="status">
+           <property name="text">
+            <string>Khả dụng</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -62,7 +78,13 @@
          <item>
           <widget class="QLabel" name="cover">
            <property name="text">
-            <string>TextLabel</string>
+            <string/>
+           </property>
+           <property name="pixmap">
+            <pixmap resource="resources.qrc">:/media/images/default_cover.png</pixmap>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
@@ -74,7 +96,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QTextEdit" name="description">
+          <widget class="QPlainTextEdit" name="description">
            <property name="placeholderText">
             <string>Nội dung sách</string>
            </property>
@@ -119,6 +141,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
